# good-ass-pydantic-integrator

./: README.md  pyproject.toml
src/good_ass_pydantic_integrator/: __init__.py  constants.py  convert.py  customizer.py  gapi.py  gapi_client.py  utils.py
tests/: __init__.py  constants.py  simple_gapi_model.py  test_convert.py  test_gapi.py  test_gapi_client.py
tests/test_data/: __init__.py  gapi_test_data.json  gapi_test_data.py  gapi_test_data_input.json  simple_gapi_model.json  simple_gapi_model.py
